Added Ua detection

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,20 +3,15 @@
 
 
 <p id="demo">Click the button to get your position.</p>
-<button onclick="getLocation()">Try It</button>
+<button onclick="getLocation()">Where Am I?</button>
 <div id="mapholder"></div>
 
 
 
-
+{{!--
 <body>
-
   <div id="map"></div>
-
 </body>
-
-
-
 
 <h2>Where have I been?</h2>
 <form action="/" method="POST">
@@ -24,3 +19,4 @@
     <input type="hidden" name="longitude" value=""/>
     <button type="submit" class="btn btn-primary btn-lg" disabled>Check In!</button>
 </form>
+--}}
