Tidy up the place

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,29 @@
 
 <h1>Browser Cracks</h1>
 
+<h2>User Location</h2>
+<p id="demo">Here is where you are located</p>
+{{!--<button onclick="getLocation()">Where Am I?</button> --}}
 
-<p id="demo">Click the button to get your position.</p>
-<button onclick="getLocation()">Where Am I?</button>
 <div id="mapholder"></div>
+<h2>User Agent Information</h2>
+<div id="userAgentInfo"></div>
+
+
+
+<script src='javascripts/client.js'>
+</script>
+<script>
+getLocation()
+httpGet()
+</script>
+
+
+
+
+
+
+
 
 
 
