--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,5 @@ a {
 #mapid { height: 180px; width: 300px }
 
 #map{ width: 400px; height: 300px; }
+
+#userAgentInfo {width: 200px; word-wrap: break-word; display:flex;}
